--- a/src/components/CartItem/index.module.scss
+++ b/src/components/CartItem/index.module.scss
@@ -20,3 +20,19 @@
     font-size: 16px;
     margin: 0 0 16px 0;
 }
+
+.right {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.image {
+    width: 50px;
+    height: 50px;
+
+    @media screen and (min-width: 768px) {
+        width: 100px;
+        height: 100px;
+    }
+}
